    - 'changelog' subcommand:
      - Use source version for fetching remote changelogs if present. Fixes
        determining remote path for versions that had a binary-only rebuild(s).
    - 'policy' subcommand:
      - When called without arguments, print available Releases.
  * Cupt:
    - Cache:
      - New method 'get_binary_release_data'.
      - New method 'get_source_release_data'.
      - BinaryVersion:
        - New field 'source_package_version'. It's got filled when the source
          version for package differs from the binary one.
      - Pkg:
        - [API break] Renamed to 'Package'.
        - [API break] Renamed method 'versions' to 'get_versions'.
      - Skip 'Explanation: ' lines when parsing preferences. Thanks to
        Stefano Zacchiroli <zack@debian.org>.
    - Download:
      - Manager, Methods/*:
        - Changed "success" error message from '0' to ''.
      - Manager:
        - Worker thread and 'download' method: now worker thread returns info
          had the download been processed before or not, and 'download' won't
          run post-action for already processed downloads; this change should
          avoid future race conditions when the multiple downloads of the same
          file with enabled postprocessing were scheduled.
        - Worker thread and 'download' method: delay sending result to
          download progress before 'download' acked the result
          (i.e. run post-check for it).
      - Method:
        - New free subroutine 'get_acquire_suboption_for_uri' which honors
          per-host settings.
    - Config:
      - Per-host suboption of 'acquire::*::timeout' is now supported.
    - System:
      - Worker:
        - 'do_actions': perform dpkg lock (if needed) before all other
          prepare actions, not before modifying system.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Tue, 12 May 2009 23:29:01 +0300

cupt (0.1.2) experimental; urgency=low

  * cupt:
    - 'markauto'/'unmarkauto' subcommands: