@@ -169,24 +169,12 @@ sub select_binary_package_version ($) {
 		}
 		my $package = get_binary_package($package_name);
 
-		# check for "virtual" distributions
-		if ($distribution_expression eq 'installed') {
-			my $version = $package->get_installed_version();
-			defined $version or
-					mydie("there is no installed version for package '%s'", $package_name);
-			return $version;
-		}
-
 		# example: "nlkt/sid" or "nlkt/unstable"
 		foreach my $version (@{$package->get_versions()}) {
-			# 'avail as' for non-local versions
 			my @avail_as = @{$version->{avail_as}};
-			# first avail entry is for local version
-			shift @avail_as if $version->is_installed();
 
 			foreach (@avail_as) {
-				if (defined($_->{release}) and
-					$_->{release}->{archive} eq $distribution_expression ||
+				if ($_->{release}->{archive} eq $distribution_expression ||
 					$_->{release}->{codename} eq $distribution_expression)
 				{
 					# found such a version
@@ -597,18 +585,14 @@ sub policy () {
 				}
 
 				say $version->{version_string} . ' ' . $pin;
-				# throw out local version if present
-				my @avail_as = @{$version->{avail_as}};
-				shift @avail_as if $version->is_installed();
 
+				my @avail_as = @{$version->{avail_as}};
 				foreach (@avail_as) {
 					print (' ' x 8);
-					print ${$_->{ref_base_uri}} . ' ';
+					my $origin = $_->{release}->{base_uri} || $config->var('dir::state::status');
+					print $origin . ' ';
 					print $_->{release}->{archive} . '/'. $_->{release}->{component} . ' ';
 					say '(' . ($_->{release}->{signed} ? __('signed') : __('unsigned')) . ')';
-				}
-				if ($version->is_installed()) {
-					say ' ' x 8, $config->var('dir::state::status');
 				}
 			}
 		}
@@ -618,17 +602,19 @@ sub policy () {
 
 		my $sub_say_release_info = sub {
 			my ($ref_release_info) = @_;
-			print "  ";
+			my $origin = $ref_release_info->{base_uri} || $config->var('dir::state::status');
+			my $archive = $ref_release_info->{archive};
+			my $component = $ref_release_info->{component};
+			print "  $origin $archive/$component: ";
 			print "o=", $ref_release_info->{vendor};
-			print ",a=", $ref_release_info->{archive};
+			print ",a=", $archive;
 			print ",l=", $ref_release_info->{label};
-			print ",c=", $ref_release_info->{component};
+			print ",c=", $component;
 			print ",v=", $ref_release_info->{version};
 			print ",n=", $ref_release_info->{codename};
 			say "";
 		};
 
-		#TODO: form release file for 'status' entry too
 		say "Package files:";
 		my $ref_binary_release_data = $cache->get_binary_release_data();
 		foreach my $ref_release_info (@$ref_binary_release_data) {
