@@ -12,6 +12,9 @@ cupt (0.1.3) UNRELEASED; urgency=low
     - Cache:
       - New method 'get_binary_release_data'.
       - New method 'get_source_release_data'.
+      - Include base URI in release info.
+      - Installed versions of packages now have archive 'installed',
+        codename 'now', vendor 'dpkg' in release info.
       - BinaryVersion:
         - New field 'source_package_version'. It's got filled when the source
           version for package differs from the binary one.
